# Percolatorv0

./: .gitignore  COMMENCER_ICI.txt  Cargo.toml  DEPLOY_TO_GITHUB.md  HOW_TO_TEST.md  PRESENTATION.md  PRESENTATION_COMPLETE.md  QUICKSTART.md  README.md  README_FINAL_SUMMARY.txt  START_HERE.md  demo.bat  demo.sh  vercel.json
docs/: index.html
programs/router/src/: lib.rs
programs/slab/src/: lib.rs
tests/v0-tests/: Cargo.toml
tests/v0-tests/src/: lib.rs
